@startuml

interface IDataProcessor {
    +ProcessData(): void
}

class GpsData {
    -speed: double
    -heading: double
    +GetSpeed(): double
    +GetHeading(): double
    +ProcessData(): void
}

class GyroscopeData {
    -angularVelocity: double
    -orientation: double
    +GetAngularVelocity(): double
    +GetOrientation(): double
    +ProcessData(): void
}

class DataProcessor {
    +ComputeGpsData(gpsData: GpsData): void
    +ComputeGyroscopeData(gyroData: GyroscopeData): void
}

GpsData --|> DataProcessor : 1 : 1
GyroscopeData --|> DataProcessor : 1 : 1
DataProcessor --> IDataProcessor

@enduml